added more tests #20